@@ -12,11 +12,11 @@
     <properties>
         <!-- https://maven.apache.org/general.html#encoding-warning -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>15</java.version>
+        <java.version>16</java.version>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
         <maven.compiler.release>16</maven.compiler.release>
-        <maven.compiler.version>3.8.1</maven.compiler.version>
+        <maven.compiler.version>3.9.0</maven.compiler.version>
         <lombok.version>[1.18.12,)</lombok.version>
         <my.junit.version>[5.4.0,)</my.junit.version>
         <pitest.version>1.5.1</pitest.version>
@@ -99,17 +99,9 @@
             <plugin>
                 <!--<groupId>org.apache.maven.plugins</groupId>-->
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${surefire.version}</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>${surefire.version}</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
             </plugin>
             <!--<plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
